--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fleek-platform/cli",
-  "version": "3.8.2",
+  "version": "3.8.3",
   "bin": {
     "fleek": "bin/index.js"
   },
@@ -48,7 +48,7 @@
     "dotenv": "^16.4.5",
     "eciesjs": "0.4.7",
     "esbuild": "^0.21.4",
-    "files-from-path": "^1.0.0",
+    "files-from-path": "1.0.0",
     "glob": "^8.1.0",
     "hash-wasm": "^4.11.0",
     "importx": "^0.5.0",
