fix: 🐛 ensure os-agnosticism for windows compatibility (#78)
## Why?

The Fleek CLI currently fails in Windows environments because it
utilizes shell commands (`rm -rf`, `cp`) and path construction logic
that are not cross-platform. This prevents Windows users from building
and running the CLI, leading to errors like the `en.json not found`
error reported in issue #47

## How?

This PR addresses the compatibility issues by:

- Replacing `rm -rf` commands in `package.json` scripts with `npx
rimraf` for OS-agnostic file deletion
- Replacing `cp` commands with `npx cpy-cli` to ensure assets (like the
`locales` directory) are copied correctly on all operating systems
- Refactoring path handling in `src/utils/configuration/json.ts` to use
Node's `path.join` for cross-platform-safe path construction

## Tickets?

- Closes #47

## Contribution checklist?

- [x] The commit messages are detailed
- [x] The `build` command runs locally
- [x] Assets or static content are linked and stored in the project
- [x] You have manually tested
- [ ] You have provided tests

## Security checklist?

- [x] Sensitive data has been identified and is being protected properly
- [x] Injection has been prevented (parameterized queries, no eval or
system calls)

## Preview?

N/A

--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   "main": "dist/cli.js",
   "types": "./dist/cli.d.ts",
   "scripts": {
-    "build": "pnpm clean:dist && pnpm transpile && pnpm bundle && cp -r ./src/templates ./dist",
+    "build": "pnpm clean:dist && pnpm transpile && pnpm bundle && npx cpy-cli ./src/templates ./dist",
     "build:ci": "pnpm run build",
     "bundle": "ts-node -r dotenv/config bundle.ts",
     "changeset:add": "pnpm exec changeset",
     "changeset:status": "pnpm exec changeset status",
     "changeset:version": "pnpm exec changeset version",
     "clean": "pnpm \"/^clean:.*/\"",
-    "clean:dist": "rm -rf dist",
-    "clean:generated": "rm -rf generated",
-    "clean:node": "rm -rf node_modules",
+    "clean:dist": "npx rimraf dist",
+    "clean:generated": "npx rimraf generated",
+    "clean:node": "npx rimraf node_modules",
     "format": "npx @biomejs/biome format --write --changed ./src",
     "format:check": "pnpm exec biome format ./src",
     "format:unsafe": "pnpm exec biome check --write --unsafe ./src",
