--- a/package.json
+++ b/package.json
@@ -26,13 +26,7 @@
   },
   "main": "dist/cli.js",
   "types": "./dist/cli.d.ts",
-  "files": [
-    "bin",
-    "dist",
-    "locales",
-    "README.md",
-    "LICENSE"
-  ],
+  "files": ["bin", "dist", "locales", "README.md", "LICENSE"],
   "scripts": {
     "build": "pnpm clean:dist && pnpm transpile && pnpm bundle && npx cpy-cli ./src/templates ./dist",
     "build:ci": "pnpm run build",
